force-app/main/default/objects/Patient__c/fields/Admission_Days__c.field-meta.xml
<CustomField>
    <fullName>Admission_Days__c</fullName>
    <label>Admission Days</label>
    <type>DateTime</type>
</CustomField>