force-app/main/default/objects/Patient__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brampton</fullName>
            </value>
            <value>
                <fullName>North York</fullName>
            </value>
            <value>
                <fullName>Markham</fullName>
            </value>
            <value>
                <fullName>Oakville</fullName>
            </value>
            <value>
                <fullName>Caledon</fullName>
            </value>
            <value>
                <fullName>Bolton</fullName>
            </value>
            <value>
                <fullName>Vaughan</fullName>
            </value>
            <value>
                <fullName>Richmond Hill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>