force-app/main/default/objects/Patient__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>