force-app/main/default/objects/Patient__c/fields/Health_Problems__c.field-meta.xml
<CustomField>
    <fullName>Health_Problems__c</fullName>
    <label>Health Complications</label>
    <length>100</length>
    <type>Text</type>
</CustomField>