force-app/main/default/objects/Patient__c/fields/Patient_Attendent__c.field-meta.xml
<CustomField>
    <fullName>Patient_Attendent__c</fullName>
    <label>Patient Attendent</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>