force-app/main/default/objects/Patient__c/fields/vscodetest__c.field-meta.xml
<CustomField>
    <fullName>vscodetest__c</fullName>
    <description>NA</description>
    <inlineHelpText>NA</inlineHelpText>
    <label>vscodetest</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>