force-app/main/default/objects/Patient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Title__c</columns>
    <columns>NAME</columns>
    <columns>Patient_ID__c</columns>
    <columns>Gender__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Contact_Number__c</columns>
    <columns>Age__c</columns>
    <columns>Health_Problems__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>